--- a/order-service/src/main/resources/application.yml
+++ b/order-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   application:
-    name: user-service
+    name: order-service
   datasource:
     driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:mysql://localhost:3306/ecommerce
@@ -25,8 +25,4 @@ eureka:
 
 logging:
   level:
-    com.example.userservicel: DEBUG
-
-token:
-  expiration_time: 86400000
-  secret: user_token
+    com.example.orderservice: DEBUG
