--- a/gateway-service/build.gradle
+++ b/gateway-service/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.0'
+
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    compileOnly 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 dependencyManagement {
