--- a/user-serivce/build.gradle
+++ b/user-serivce/build.gradle
@@ -21,7 +21,6 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.6.1'
-    compileOnly 'io.jsonwebtoken:jjwt:0.9.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     annotationProcessor 'org.projectlombok:lombok'
@@ -39,6 +38,8 @@ dependencies {
     implementation('org.apache.tomcat.embed:tomcat-embed-jasper:10.0.14')
     implementation('javax.servlet:jstl:1.2')
 
+    implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
+    compileOnly 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
 
