--- a/user-serivce/build.gradle
+++ b/user-serivce/build.gradle
@@ -20,18 +20,21 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-
-    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
-
+    //security
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.6.1'
+    //cloud
+    implementation 'org.springframework.cloud:spring-cloud-config:3.0.5'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.0'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.0'
 
+    //database
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
     implementation('org.springframework.boot:spring-boot-starter-jdbc:2.6.3')
     implementation('org.mariadb.jdbc:mariadb-java-client:2.7.3')
