--- a/user-serivce/build.gradle
+++ b/user-serivce/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     //security
     implementation 'org.springframework.boot:spring-boot-starter-security:2.6.1'
     //cloud
-    implementation 'org.springframework.cloud:spring-cloud-config:3.0.5'
+    compileOnly 'org.springframework.cloud:spring-cloud-starter-config:3.1.0'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.0'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.0'
 
@@ -40,6 +40,8 @@ dependencies {
     implementation('org.mariadb.jdbc:mariadb-java-client:2.7.3')
     implementation('org.apache.tomcat.embed:tomcat-embed-jasper:10.0.14')
     implementation('javax.servlet:jstl:1.2')
+
+    implementation('org.springframework.boot:spring-boot-starter-actuator')
 
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
     compileOnly 'io.jsonwebtoken:jjwt:0.9.1'
