--- a/config-service/build.gradle
+++ b/config-service/build.gradle
@@ -17,9 +17,15 @@ ext {
 }
 
 dependencies {
+    //spring cloud
     implementation 'org.springframework.cloud:spring-cloud-config-server'
     implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
+
+    //spring boot
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation'org.springframework.boot:spring-boot-starter-actuator'
 }
 
 dependencyManagement {
