--- a/config-service/src/main/resources/application.yml
+++ b/config-service/src/main/resources/application.yml
@@ -3,12 +3,27 @@ server:
 spring:
   application:
     name: config-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
+  profiles:
+    active: native
   cloud:
     config:
       server:
+        native:
+          search-locations: file://${user.home}/Desktop/IT/spring cloud/native-file-repo
         git:
 #          uri: file:///Users/jeonghun/Desktop/IT/spring cloud/git-local-repo
           uri: https://github.com/Jeonghoon2/spring-cloud-config
           #프라이빗을 했을 경우
 #          username:
 #          password:
+
+management:
+  endpoint:
+    web:
+      exposure:
+        include: ["busrefresh", "health"]
