--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -13,6 +13,11 @@ token:
 spring:
   application:
     name: apigateway-service
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: guest
+    password: guest
   cloud:
     gateway:
       default-filters:
@@ -72,7 +77,7 @@ management:
   endpoint:
     web:
       exposure:
-        include: ["refresh", "health", "beans", "httptrace"]
+        include: ["refresh", "health", "beans", "httptrace", "busrefresh"]
 #        - id: first-service
 #          uri: lb://MY-FIRST-SERVICE
 #          predicates:
