--- a/user-serivce/build.gradle
+++ b/user-serivce/build.gradle
@@ -18,13 +18,17 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    set('springCloudVersion', "2021.0.1")
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    annotationProcessor 'org.projectlombok:lombok'
-    compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
     //security
     implementation 'org.springframework.boot:spring-boot-starter-security:2.6.1'
@@ -32,12 +36,12 @@ dependencies {
     compileOnly 'org.springframework.cloud:spring-cloud-starter-config:3.1.0'
     implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.0'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-bus-amqp'
 
     //database
-    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
     implementation('org.springframework.boot:spring-boot-starter-jdbc:2.6.3')
-    implementation('org.mariadb.jdbc:mariadb-java-client:2.7.3')
+    implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
     implementation('org.apache.tomcat.embed:tomcat-embed-jasper:10.0.14')
     implementation('javax.servlet:jstl:1.2')
 
@@ -47,7 +51,11 @@ dependencies {
     compileOnly 'io.jsonwebtoken:jjwt:0.9.1'
 }
 
-
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
 
 tasks.named('test') {
     useJUnitPlatform()
