--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -3,4 +3,4 @@ encrypt:
   key-store:
     location: file://${user.home}/Desktop/IT/spring cloud/keystore/apiEncryptionKey.jks
     password: test1234
-    alias: apiEncrytionkey
+    alias: apiencryptionkey
