--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -7,8 +7,8 @@ eureka:
     fetch-registry: true
     service-url.defaultZone: http://localhost:8761/eureka
 
-token:
-  secret: user_token
+#token:
+#  secret: user_token
 
 spring:
   application:
