--- a/user-serivce/build.gradle
+++ b/user-serivce/build.gradle
@@ -49,6 +49,11 @@ dependencies {
 
     implementation 'javax.xml.bind:jaxb-api:2.4.0-b180830.0359'
     compileOnly 'io.jsonwebtoken:jjwt:0.9.1'
+
+    /* Feign Client */
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+
 }
 
 dependencyManagement {
